Update README file and graphite theme.

--- a/themes/graphite.conf
+++ b/themes/graphite.conf
@@ -6,7 +6,7 @@
 ## name: graphite
 ## author: tpaau-17DB
 ## license: GNU General Public License v3.0
-## upstream: A URL pointing to the location of this file upstream for auto-updates
+## upstream: https://github.com/tpaau-17DB/kitty-themes-custom/tree/main/themes/graphite.conf
 ## blurb: A grayscale colorscheme.
 
 #: All the settings below are colors, which you can choose to modify, or use the
