Update `graphite` theme.

--- a/themes/graphite.conf
+++ b/themes/graphite.conf
@@ -18,8 +18,8 @@
 
 foreground                      #b9b9b9
 background                      #000000
-selection_foreground            #b9b9b9
-selection_background            #000000
+selection_foreground            #000000
+selection_background            #b9b9b9
 
 
 #: Cursor colors
