Restore graphite metadata deleted by accident.

--- a/themes/graphite.conf
+++ b/themes/graphite.conf
@@ -1,3 +1,9 @@
+## name: graphite
+## author: tpaau-17DB
+## license: GNU General Public License v3.0
+## upstream: https://github.com/tpaau-17DB/kitty-themes-custom/tree/main/themes/graphite.conf
+## blurb: A grayscale colorscheme.
+
 #: The basic colors
 
 foreground                      #b9b9b9
